@@ -1,3 +1,13 @@
+2010-12-23 José Alburquerque <jaalburqu@svn.gnome.org>
+
+  _CLASS_GTKOBJECT: Remove __REAL_* additional arguments.
+  
+  * tools/m4/class_gtkobject.m4: Remove the use of the
+  __REAL_[CNAME|CPARENT]__ variables needed to wrap some classes in
+  gtkmm that were typedef to their base type (such as GdkWindow and
+  GdkPixmap). These classes have been fixed in gtk+-3 thus eliminating
+  the need for the special arguments in _CLASS_GTKOBJECT.
+
 2010-12-09 Murray Cumming <murrayc@murrayc.com>
 
   Added class_gtkobject.m4, previously in glibmm.
